# APRNN

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker_build.sh  docker_run.sh  eval_1_aprnn.py  eval_1_lookup.py  eval_1_prdnn.py  eval_1_reassure.py  eval_2_aprnn.py  eval_2_prdnn.py  eval_2c_aprnn.py  eval_3_aprnn.py  eval_3_lookup.py  eval_3_prdnn.py  eval_3_reassure.py  eval_4_aprnn.py  eval_4_prdnn.py  eval_5_aprnn.py  eval_6_aprnn.py  eval_7.sh  eval_7_aprnn.py  eval_8_lookup.py  eval_8_lookup.sh  pyproject.toml  requirements.txt  run.py  tutorial.py
REASSURE/: exp_tools.py
REASSURE/tools/: build_PNN.py  gurobi_solver.py  linear_region.py  models.py  other_tools.py  readme.md
artifact/eval_1/: aprnn_3x100.pth  aprnn_9x100.pth  aprnn_9x200.pth  prdnn_3x100.pth  prdnn_9x100.pth
artifact/eval_3/: aprnn.pth  prdnn.pth
artifact/eval_4/: aprnn.pth  prdnn.pth
artifact/eval_5/: aprnn.pth
data/: eval_3_prdnn_labels.npy  eval_3_reassure_100_uniq_ap_buggy_labels.npy  eval_3_reassure_100_uniq_ap_buggy_points.npy
experiments/: BUILD
experiments/acas/: BUILD  __init__.py  datasets.py  evaluation.py  models.py  properties.py  repair.py
experiments/base/: BUILD  __init__.py
experiments/imagenet/: BUILD  __init__.py  datasets.py  evaluation.py  models.py  repair.py
experiments/mnist/: BUILD  __init__.py  datasets.py  evaluation.py  models.py  repair.py
models/mnist/: mnist_gelu_3_100.pth  mnist_hardswish_3_100.pth  mnist_relu_3_100.tf
sytorch/: BUILD  __init__.py  pervasives.py
sytorch/nn/: BUILD  __init__.py  jacobian.py  parameter.py  (+3 more)
(+58 files in other folders)
